_assets/stylesheets/activecell_com.css
---
---

@font-face {
  font-family: 'Lusitana';
  font-style: normal;
  font-weight: bold;
  src: local('Lusitana Bold'), local('Lusitana-Bold'), url('http://themes.googleusercontent.com/static/fonts/lusitana/v1/oCjlVB3OWc0D00Ervq8JG7rIa-7acMAeDBVuclsi6Gc.woff') format('woff');
}

@font-face{ 
	font-family: 'chadcons';
	src: url('http://d2n39uym85fey2.cloudfront.net/assets/fonts/websymbols-regular-webfont.eot');
	src: url('http://d2n39uym85fey2.cloudfront.net/assets/fonts/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'),
	     url('http://d2n39uym85fey2.cloudfront.net/assets/fonts/websymbols-regular-webfont.woff') format('woff'),
	     url('http://d2n39uym85fey2.cloudfront.net/assets/fonts/websymbols-regular-webfont.ttf') format('truetype'),
	     url('http://d2n39uym85fey2.cloudfront.net/assets/fonts/websymbols-regular-webfont.svg#chadcons') format('svg');
}
.glyph {
	font-family: 'chadcons';
}
body {
	padding-top: 55px;  /* Make the container go all the way to the bottom of the topbar */
	font-size:14px;
	background-color: white;
	color: #675B5E;
}
a:hover {
	text-decoration:none;
}
p {
	font-size:14px;
	line-height: 20px;
	margin-bottom:16px;
}
.container {
	width:940px;
}
h1, h2 {
	font-family: 'Lusitana', serif;
  font-weight: normal;  
  margin-bottom: 12px;
}
h1 {
	font-size:38px;
}
h1.small {
	font-size: 32px;
}
h2 {
	font-size: 32px;
}
h3 {
	font-size:24px;
	margin-bottom:8px;
}
h4 {
	font-size:16px;
	margin-bottom:8px;
}
label, input, button, select, textarea { font-size:14px; }

.clearfix {
  *zoom: 1;
}

.clearfix:before, .clearfix:after {
  display: table;
  content: "";
}

.clearfix:after {
  clear: both;
}

.grey-bg {
	background-color: gray;
}

.on-top {
  border: none !important;
  background: white;
  border-radius: 3px;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.21) !important;
  padding: 15px;
}

.thumbnail .on-top {
  padding: 6px;
}

.thumbnail a:hover {
  border-color: #30878f;
}

.avatar140 {
  padding: 3px;
  background: white;
  border: 1px solid #EEE;
  border-radius: 3px;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.21) !important;  
  height: 140px;
  width: 140px;
}

/* buttons */
.btn-primary {
  background-color: #2a787f;
  background-image: -moz-linear-gradient(top, #30878f 0%, #236369 99%);
  background-image: -ms-linear-gradient(top, #30878f, #236369);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#30878f), to(#236369));
  background-image: -webkit-linear-gradient(top, #30878f, #236369);
  background-image: -o-linear-gradient(top, #30878f, #236369);
  background-image: linear-gradient(top, #30878f, #236369);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF30878F', endColorstr='#FF236369', GradientType=0);
  border-color: #236369 #236369 #102d30;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
  *background-color: #236369;
  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
}
.btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] {
  background-color: #236369;
  *background-color: #1d5156;
}
.btn-primary:active, .btn-primary.active {
  background-color: #163f43 \9;
}
.btn-success {
  background-color: #7eba61;
  background-image: -moz-linear-gradient(top, #8ac16f 0%, #6db14c 99%);
  background-image: -ms-linear-gradient(top, #8ac16f, #6db14c);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#8ac16f), to(#6db14c));
  background-image: -webkit-linear-gradient(top, #8ac16f, #6db14c);
  background-image: -o-linear-gradient(top, #8ac16f, #6db14c);
  background-image: linear-gradient(top, #8ac16f, #6db14c);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF8AC16F', endColorstr='#FF6DB14C', GradientType=0);
  border-color: #6db14c #6db14c #4c7b35;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
  *background-color: #6db14c;
  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
}
.btn-success:hover, .btn-success:active, .btn-success.active, .btn-success.disabled, .btn-success[disabled] {
  background-color: #6db14c;
  *background-color: #629f44;
}
.btn-success:active, .btn-success.active {
  background-color: #578d3d \9;
}


/* navbar */

.navbar {
	border-bottom:2px solid #276A75;
	-webkit-box-shadow: 0 8px 10px rgba(0, 0, 0, 0.2);
	-moz-box-shadow:0 8px 10px rgba(0, 0, 0, 0.2);
	box-shadow:0 10px 8px rgba(0, 0, 0, 0.2);
}
.navbar .brand {
	padding: 8px 16px 12px 0px;
}
.navbar .brand img {
	margin-top: 1px;
	margin-bottom: -8px;
}
.navbar .nav li {
	margin-top:16px;
	font-size:14px;
	margin-right:5px;
}
.navbar .nav .top {
	display:none;
}
.navbar .nav li a {
	padding:5px 10px 6px;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	border:1px solid transparent;
}
.navbar .nav li a:hover {
	border:1px solid #000;
	color:#A9D5D8;
	border-top:1px solid #00455B;
	-webkit-transition: 0.5s ease;
	-moz-transition: 0.5s ease;
	-ms-transition: 0.5s ease;
	-o-transition: 0.5s ease;
	transition: 0.5s ease;
}
.navbar .nav .active a {
	border:1px solid #00455B;
	border-top:1px solid #000;
}
.navbar .nav .active a:hover {
	border:1px solid #00455B;
	border-top:1px solid #000;
}

.navbar .signin {
	margin-top:14px;
	float:right;
}
/* ... */

